--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-color: #7C3AED;
+    --dark-gray:#6B7280;
 }
 
 body {
@@ -76,3 +77,27 @@ hr {
 .navigation .link{
     font-weight: bold;
 }
+
+
+/* @Header */
+
+.hero{
+    padding: 2rem;
+}
+
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading{
+    padding-top: 1rem;
+    text-align: center;
+    color: var(--dark-gray); 
+}
+
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color)
+}
+
