--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 
 :root {
     --primary-color: #7C3AED;
-    --dark-gray:#6B7280;
+    --dark-gray: #6B7280;
+    --off-white: #F3F4F6;
 }
 
 body {
@@ -55,49 +56,64 @@ hr {
 
 /* @ navigation */
 
-.navigation{
+.navigation {
     background-color: var(--primary-color);
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
 
-.navigation .nav-brand{
+.navigation .nav-brand {
     font-weight: bold;
 }
 
-.navigation .nav-pills{
+.navigation .nav-pills {
     text-align: right;
 }
 
-.navigation .link{
+.navigation .link {
     color: white;
 }
 
-.navigation .link{
+.navigation .link {
     font-weight: bold;
 }
 
 
 /* @Header */
 
-.hero{
+.hero {
     padding: 2rem;
 }
 
-.hero .hero-img{
+.hero .hero-img {
     max-width: 350px;
     display: block;
     margin: auto;
 }
 
-.hero .hero-heading{
+.hero .hero-heading {
     padding-top: 1rem;
     text-align: center;
-    color: var(--dark-gray); 
+    color: var(--dark-gray);
 }
 
-.hero .hero-heading .heading-inverted{
+.hero .hero-heading .heading-inverted {
     color: var(--primary-color)
+}
+
+
+/* @Sections */
+
+.section{
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+}
+
+.ow{
+    background-color: var(--off-white);
 }
 
