--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0px;
 }
 
 hr {
@@ -105,7 +106,7 @@ hr {
 
 /* @Sections */
 
-.section{
+.section {
     padding: 2rem;
 }
 
@@ -113,7 +114,25 @@ hr {
     text-align: center;
 }
 
-.ow{
+.ow {
     background-color: var(--off-white);
 }
 
+
+/* Footer */
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link{
+    color: white;
+}
+
+.footer ul{
+    padding-inline-start: 0px;
+}
