--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,14 @@ hr {
     margin: 2rem 0rem;
 }
 
+/* spaces */
+
+.margin-md{
+    /* we need to do padding */
+    margin: 2rem;
+}
+
+
 /* .containers */
 
 .container {
@@ -27,9 +35,13 @@ hr {
 }
 
 /* links */
+
 .link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
 }
 
 .link-primary {
@@ -76,15 +88,16 @@ hr {
     color: white;
 }
 
-.navigation .link {
+.navigation .link-active{
     font-weight: bold;
 }
 
 
 /* @Header */
 
-.hero {
+ .hero {
     padding: 2rem;
+    padding-top: 5rem;
 }
 
 .hero .hero-img {
@@ -121,7 +134,7 @@ hr {
 
 /* Footer */
 
-.footer{
+.footer {
     background-color: var(--primary-color);
     padding: 2rem 1rem;
     text-align: center;
@@ -129,10 +142,15 @@ hr {
     border-top-right-radius: 1rem;
 }
 
-.footer .link{
+.footer .link {
     color: white;
 }
 
-.footer ul{
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
+}
+
+.footer ul {
     padding-inline-start: 0px;
 }
