--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root {
-    --primary-color: #7C3AED;
+    --primary-color: #F87171;
     --dark-gray: #6B7280;
     --off-white: #F3F4F6;
 }
@@ -17,7 +17,7 @@ hr {
 
 /* spaces */
 
-.margin-md{
+.margin-md {
     /* we need to do padding */
     margin: 2rem;
 }
@@ -88,14 +88,14 @@ hr {
     color: white;
 }
 
-.navigation .link-active{
+.navigation .link-active {
     font-weight: bold;
 }
 
 
 /* @Header */
 
- .hero {
+.hero {
     padding: 2rem;
     padding-top: 5rem;
 }
@@ -146,7 +146,7 @@ hr {
     color: white;
 }
 
-.footer .footer-header{
+.footer .footer-header {
     font-weight: bold;
     font-size: large;
 }
